mtom in progress

--- a/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
@@ -63,7 +63,7 @@ As we will explain, this has consequences
 for interpreting a range of findings concerning infants', adults' and nonhumans' performances on theory of mind tasks.
 It may help us to understand what enables those with limited cognitive resources or little conceptual sophistication, such as infants, chimpanzees, scrub-jays and human adults under load, to track, within limits, facts about perceptions and beliefs.
 
-In this section we defend explain our question; in the next section we introduce the findings which motivate facing it before starting to answer it in the third section.
+In this section we defend explain our question; in the next sections we introduce the findings which motivate facing it before starting to answer it in the fourth section.
 
 Some may find our question initially incomprehensible.
 Could abilities to track false beliefs (say) really involve anything other than representing false beliefs?
@@ -104,6 +104,12 @@ Can anything less than full-blown theory of mind cognition  explain systematic s
 We do not aim to argue that someone could track beliefs, true and false, without any theory of mind cognition at all.
 Our concern is rather with the construction of a minimal form of theory of mind cognition.
 As we shall explain, minimal theory of mind does involve representing  belief-like  states, but it does not involve representing beliefs or other propositional attitudes as such.
+
+The notion that some abilities to track perceptions or beliefs involve only on theory of mind cognition which does not involve representing perceptions or beliefs as such is not entirely novel.
+To mention only those we draw most directly on, Gomez (\citeyear[][p.\ 730]{en_1259}) has emphasized primitive intentional relations to objects established by gaze, O’Neil and Doherty have separately discussed a notion of engagement with objects (\citealp{en_1159, en_1140}), Call and Tomasello (\citeyear[][p.\ 58]{en_1669}) have suggested that chimpanzees track the `likely target' of others’ visual access and understand something about its effects on behaviour, and Whiten (\citeyear[]{en_1415, en_1416}) uses the notion of an `intervening variable' to explain primitive theory of mind notions.  These are illuminating ideas and what follows can be seen as an elaboration and partial synthesis of them.  
+The result---minimal theory of mind---is unlike its precursors in that it is rich enough to explain systematic success on a range of false belief tasks.  Our approach is novel in this and others respects to which we return (in the Conclusion) after presenting the substance of our account.
+
+
 
 %The notion that theory of mind cognition could involve representing non-propositional counterparts of belief 
 %According to Davidson, 
@@ -176,7 +182,7 @@ While aspects of this conjecture have already been tested \citep[]{Samson:2010jm
 
 First, why isn't tracking belief and perception always automatic?
 Consider what is involved in representing beliefs and other propositional attitudes.
-On any standard view, propositional attitudes form complex causal structures, have arbitrarily nest-able contents, interact with each other in uncodifiably complex ways and are individuated by their causal and normative roles in explaining thoughts and actions \citep[]{en_809, en_249}.  
+On any standard view, propositional attitudes form complex causal structures, have arbitrarily nestable contents, interact with each other in uncodifiably complex ways and are individuated by their causal and normative roles in explaining thoughts and actions \citep[]{en_809, en_249}.  
 If anything should consume working memory and other scarce cognitive resources, it is surely representing states with this combination of properties.
 So even without knowing in any detail how theory of mind cognition is implemented, it is plausible that some feature, or combination of features, of the propositional attitudes  makes full-blown theory of mind cognition demanding.%
 \footnote{
@@ -211,7 +217,8 @@ suggests (without decisively showing, of course),
 contrary to a natural assumption mentioned above,
 that not all of their abilities to track perceptions and beliefs involve representing propositional attitudes as such.
 
-Additional motivation for our question comes from evidence for theory of mind abilities in young children and infants.
+\section{More motivation}
+Further motivation for our question comes from evidence for theory of mind abilities in young children and infants.
 Children in their second year use pointing to provide information to others \citep[]{en_1093} in ways that reflect a partner’s ignorance or knowledge \citep[]{en_1699}, as well as providing more information to ignorant than knowledgeable partners when making requests \citep[]{en_1140}.  One-year-old children also predict actions of agents with false beliefs about the locations of objects \citep[]{en_1092, en_1208} and choose different ways of interacting with others depending on whether their beliefs are true or false \citep[]{en_1783,Knudsen:2011fk,southgate:2010fb}.  And in much the way that irrelevant facts about the contents of others’ beliefs modulate adult subjects’ response times, such facts also affect how long 7-month-old infants look at some stimuli \citep[]{kovacs_social_2010}.
 
 What do these infants and young children represent that enables them, within limits, to track others’ beliefs and other propositional attitudes?   
@@ -221,32 +228,43 @@ Development of reasoning about beliefs in humans may also be facilitated by expl
 This is evidence that representations of belief in humans typically emerge from extensive participation in social interactions (as \citealp{en_1300} suggest).  
 If any of this is right, we must reject the hypothesis that infants are representing beliefs or other propositional attitudes as such.
 
-In principle one might suppose that infants and young childrens' abilities to track perception and belief 
+In principle an alternative would be to suppose that infants' and young children's abilities to track perceptions and beliefs 
 do not involve any theory of mind cognition at all
 but are instead based on 
 representations of nonintentional behaviour only.
-While it is possible in principle to explain some belief-tracking abilities by appeal to hypothetical behaviour reading capacities,\footnote{ 
- See \citet{perner:1988_developing,en_1168, en_1169}.
-}  
-there is ***objections ... too little is known 
+It is arguably possible in principle to explain some belief-tracking abilities by appeal to hypothetical behaviour reading capacities  \citep{perner:1988_developing,en_1168, en_1169}.
+But there are several objections to the claim that the full range of even infants' abilities to track perceptions and beliefs could be explained in this way \citep{en_1691,Apperly:2009ju}.  
+And what is is currently known about humans' actual behaviour reading capacities suggests that they are unlikely to explain systematic success on false belief tasks.%
+\footnote{
+Key studies include
+	\citet{Newtson:1976ni}, 
+	\citet{Byrne:1999jk},
+	\citet{Baldwin:2001rs},
+	\citet{Saylor:2007pj} and
+	\citet{Baldwin:2008mw}.
+} 
+ 
+Here, then, is a second source of motivation for our question about what someone could represent that would enable her, within limits, to track perceptions and beliefs.
+As we have seen, there are significant if not decisive objections to the two best developed conjectures about infant theory of mind abilities, the conjecture that these involve representing beliefs and other propositional attitudes as such and the conjecture that these involve representing nonintentional behaviour only.  
+These objections, while not decisive, justify exploring alternatives.
 
-involve reasoning about behaviour only and so do not involve any theory of mind cognition at all.
-While it is possible that 
+Theory of mind abilities are not only found in humans.
+For instance,
+scrub-jays can selectively re-cache their food in ways that deprive competitors of knowledge of its location \citep{Clayton:2007fh}, and  chimpanzees can both select routes to approach food which conceal them from a competitor’s view \citep[]{en_1546} and also retrieve food using strategies that optimize their return given what a dominant competitor has seen \citep[]{en_1545}.  
+There is debate about the cognitive underpinnings of these abilities (e.g.\ 
+	\citealp{povinelli:2004vonk, 
+			Penn:2007ey,
+			Tomasello:2005ce,
+			Call:2008di}). 
+If it is not yet known precisely what explains these abilities 
+and if the available evidence does not already tightly constrain the space of admissible conjectures,
+then the construction of a minimal theory of mind may be relevant to these debates.
+For the conjecture that minimal theory of mind explains chimpanzees' or scrub-jays' abilities to track perceptions or beliefs can be empirically distinguished from conjectures about representations of nonintentional behaviour only and from conjectures about representations of perceptions, beliefs and other propositional attitudes as such (as we explain in section *** below).
 
-do not involve any theory of mind cognition at all
-but are instead based on 
-representations of nonintentional behaviour only.\footnote{ 
-	On scrub-jays: \citet{en_1417};
-	 on chimpanzees: \citet{en_1413}; 
-	 on young children: \citet{perner:1988_developing,en_1168, en_1169}.
-}  
-Here we must be careful to distinguish two types of  hypothesis.
-One says of a particular group of subjects, nonhumans for instance, that their theory of mind abilities could in principle be fully explained by hypothetical behaviour reading capacities.
 
-
-%Some readers may doubt that tracking perceptions or beliefs is ever automatic.
-%Others may endorse automaticity while doubting our suggestion that automatic tracking requires cognitive efficiency and therefore cannot generally involve representing propositional attitudes as such.
-
+%The construction of minimal theory of mind shows that there is a form of theory of mind cognition which does not involve representing beliefs or other propositional attitudes as such but is capable of explaining, within limits, systematic success on a range of false belief tasks.
+%As we shall show,
+%the conjecture that minimal theory of mind cognition underpins some abilities to track perceptions and belief in human adults and infants generates testable predictions that distinguish it from the alternatives.
 
 
 
@@ -258,74 +276,49 @@ Davidson ...
 
 Davidson might be right about ordinary, commonsense psychology.
 
-So a constructive approach is needed.
-
-
-\section{***}
+So a constructive approach is needed. ***
 
 
 
 
-Is it already known what young children, chimpanzees or scrub-jays represent that enables them, within limits, to track others’ perceptions or beliefs?   
-Some hypotheses have been offered, 
-but each faces significant objections, as we shall briefly outline here.
-We do not suggest that these hypotheses are known to be false, only that they are not known to be true.
-This is what motivates articulating and testing  alternative hypotheses, such as the minimal theory of mind hypothesis we develop in following sections.
 
+\section{Minimal theory of mind}
 
-
-
-***
-
-Some have hypothesised that infants', chimpanzees' or scrub-jays' theory of mind abilities 
-do not involve any theory of mind cognition at all
-but are instead based on 
-representations of nonintentional behaviour only.\footnote{ 
-	On scrub-jays: \citet{en_1417};
-	 on chimpanzees: \citet{en_1413}; 
-	 on young children: \citet{perner:1988_developing,en_1168, en_1169}.
-}  
-Here we must be careful to distinguish two types of  hypothesis.
-One says of a particular group of subjects, nonhumans for instance, that their theory of mind abilities could in principle be fully explained by hypothetical behaviour reading capacities.
-
-
-A second, much stronger hypothesis is that a particular group of subjects' theory of mind abilities are explained by their actual behaviour reading capacities.
-One difficulty for this second type of hypothesis is that relatively little is known about actual behaviour reading capacities.\footnote{
-Key studies include
-	\citet{Newtson:1976ni}, 
-	\citet{Byrne:1999jk},
-	\citet{Baldwin:2001rs},
-	\citet{Saylor:2007pj} and
-	\citet{Baldwin:2008mw}.
+In this section we identify concepts and principles necessary for constructing a form of theory of mind cognition.  We begin with someone, call her Lucky, capable  of representing nonintentional behaviour only and ask what more is needed for minimal theory of mind cognition.  We describe Lucky’s progress with a series of five principles. The principles are constructed in such a way that it would be coherent to suppose that Lucky has the abilities codified by the first \textit{n} principles only. They are not intended to represent a developmental or evolutionary progression.  The principles can also be extended to explain more sophisticated theory of mind abilities than those considered here.  We restrict ourselves to these five principles because they are sufficient to explain success on some well-known false belief tasks.%
+\footnote{
+In standard false belief tasks, “[t]he subject is aware that he/she and another person [call him Maxi] witness a certain state of affairs x.  Then, in the absence of the other person the subject witnesses an unexpected change in the state of affairs from x to y” \citep[][p.\ 106]{en_89}.  The test concerns whether the subject realises that Maxi will falsely believe x to obtain.  In many cases the states of affairs, x and y, differ only with respect to the location of an object \citep[e.g.][]{en_1092, en_1208, en_1824}. 
+As we go on to discuss, our proposal for a minimal theory of mind could easily be extended to cover a range of other cases;
+but importantly there are also false belief tasks success on which cannot be explained by minimal theory of mind cognition (see section ***).
 }
-Applied to infants, scrub-jays or chimpanzees several objections have been raised \citep[]{Apperly:2009ju,en_1553, Clayton:2007fh, en_1691, Suddendorf:2003co}. 
 
-The first hypothesis is that, for some subjects, some actual theory of mind abilities can be explained by those subjects actual behaviour reading capacities.
-This is plausible, although relatively little is known about actual behaviour reading capacities.\footnote{
-Key studies include
-	\citet{Newtson:1976ni}, 
-	\citet{Byrne:1999jk},
-	\citet{Baldwin:2001rs},
-	\citet{Saylor:2007pj} and
-	\citet{Baldwin:2008mw}.
+
+	We aim to provide the core elements of a computational theory in Marr’s sense (\citeyear[][pp.\ 15-29]{en_917}) where our computational theory, unlike the standard full-blown theory of mind which hinges on beliefs, desires and other propositional attitudes, is one that could be realised in a cognitively efficient manner without requiring conceptual sophistication.\footnote{ 	To provide a computation theory in Marr’s sense is not to imply that its implementation will involve computational processes.}  There are multiple ways in which this computational theory might be implemented.  We shall not discuss how the theory might be implemented here other than to note that it seems unlikely that the principles formulated below are represented explicitly.  It is valuable to articulate the computational theory in some detail before formulating and testing conjectures about implementation.  
+
+
+
+\subsection{First principle}
+
+***HERE
+
+Until now Lucky has been aware only of object-directed actions.  A further basic unit of action in theory of mind cognition is goal-directed action. To illustrate, a paradigm goal-directed action would be drinking from a bottle, which typically involves multiple object-directed actions such as first grasping a bottle and then lifting a bottle.  Many predictions do not directly concern object-directed actions but rather goal-directed actions.  Awareness of goal-directed actions is therefore an important further step in acquiring minimal theory of mind cognition. 
+
+The term ‘goal-directed action’ can be used to mean several things.  One is intentional action.  This notion is no use for constructing a minimal theory of mind.  To represent intentional actions as such you also have to represent intentions and related propositional attitudes such as beliefs \citep[]{en_18}.  Constructing a minimal theory of mind requires a basic notion of goal-directed action.  We take the units of goal-directed action to be collections of one or more object-directed behaviours.  We stipulate that for an outcome, \textit{g}, to be the goal of a collection of object-directed behaviours is for it to occur in order to bring about \textit{g}; that is, \textit{g} is the function of this collection.  Here ‘function’ should be understood teleologically.  On the simplest teleological construal of function, for an action to have the function of bringing about \textit{g} would be for actions of this type to have brought about \textit{g} in the past and for this action to occur in part because of this fact \citep[see further][]{en_144, en_141, en_162, en_139, en_161}.  Lucky needs some ability to track the functions of things (in this sense of ‘function’) so that she can distinguish from among all the outcomes of an action those which are its goals.%
+\footnote{
+Note that the requirement is not that Lucky understands the theoretical account of functions, only that she can distinguish between things which have different functions in this theoretical sense of ‘function’.  A wide variety of research supports the claim that young children, non-human primates and corvids track the functions of things (including 
+	\citealp{en_1086},
+	\citealp{en_1318},
+	\citealp{en_1431},
+	\citealp{en_1447},
+	\citealp{en_1325} and
+	\citealp{en_1708}%
+).
 }
-This hypothesis faces several objections \citep[]{en_1553, Clayton:2007fh, en_1691, Suddendorf:2003co}. 
 
+This is not an account of full-blown goal-directed action.  It is what someone who has only a minimal grasp of goal-directed action might understand.  Representing goals in this sense does not require representing representations because such goals are non-representational.  Representing goals only involves representing outcomes as functions of behaviours. 
 
+To illustrate the difference between object-directed and goal-directed actions, consider a scrub-jay repeatedly caching and re-caching a worm (we take our inspiration from studies such as Emery \& Clayton, 2001).  The outcome of this collection of object-directed caching behaviours is (let’s say) that an observer is deprived of information about the location of the worm.  This is not an outcome of any of the constituent object-directed behaviours taken individually.  It is only an outcome of the collection considered as a whole.  The significance of the whole sequence can only by appreciated by Lucky once she is equipped to represent goals.  
 
-
-\section{***}
-
-But what could other, non full-blown forms of theory of mind cognition involve representing?
-Several related proposals exist.  
-To mention only those we draw most directly on, Gomez (\citeyear[][p.\ 730]{en_1259}) has emphasized primitive intentional relations to objects established by gaze, O’Neil and Doherty have separately discussed a notion of engagement with objects (\citealp{en_1159, en_1140}), Call and Tomasello (\citeyear[][p.\ 58]{en_1669}) have suggested that chimpanzees track the `likely target' of others’ visual access and understand something about its effects on behaviour, and Whiten (\citeyear[]{en_1415, en_1416}) uses the notion of an `intervening variable' to explain primitive theory of mind notions.  These are illuminating ideas and what follows can be seen as an elaboration and partial synthesis of them.  
-The result---minimal theory of mind---is unlike its precursors in that it is rich enough to explain systematic success on a range of false belief tasks.  Our approach is novel in this and others respects to which we return (in the Conclusion) after presenting the substance of our account.
-
-
-
-
-
-
+The first principle, then, is that object-directed actions form larger units of action which are directed to goals.  This second principle is sufficient to explain some cases of imitative learning, which can be defined as attempting to reproduce the actions necessary to achieve a goal \citep[]{en_1317}.  
 
 
 
